--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc -p",
-    "start": "node app.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
