--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "slugify": "^1.6.6",
     "yup": "^1.6.1"
   },
@@ -33,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   }
